--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="inner">
 						<a href="https://andikapp.github.io/andika_gumilang_portfolio/" class="button small">Home</a>&nbsp;
-						<a href="https://pgandika.github.io/Andika_Gumilang_Portfolio/" class="button small">Projects</a>&nbsp;
+						<a href="https://pgandika.github.io/Andika_Project/" class="button small">Projects</a>&nbsp;
 				</div>
 			</header>
 
@@ -43,29 +43,29 @@
 						<h2><STRONG><u>DQLAB SQL PROJECT</u></STRONG></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://adytiapp.github.io/fast_food_america/" class="image fit thumb"><img src="images/PDAR.jpg" alt="" /></a>
-								<a href="https://adytiapp.github.io/fast_food_america/"<h3>Project Data Analysis for Retail: Sales Performance Report</h3></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project4/" class="image fit thumb"><img src="images/PDAR.jpg" alt="" /></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project4/"<h3>Project Data Analysis for Retail: Sales Performance Report</h3></a>
 								<p>This project purpose is to Analyze the performance of the DQLab Store using MySQL</p>
 								</br>
 								<p><b>Tool Used :</b>&nbsp;&nbsp;<img src="images/gblogo.png" width="60" height="30">&nbsp;&nbsp;<img src="images/mslogo.png" width="40" height="30">&nbsp;&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://adytiapp.github.io/hotel_booking_cancellation/" class="image fit thumb"><img src="images/b2b.jpg" alt="" /></a>
-								<a href="https://adytiapp.github.io/hotel_booking_cancellation/"<h3>Project Data Analysis for B2B Retail: Customer Analytics Report</h3></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project3/" class="image fit thumb"><img src="images/b2b.jpg" alt="" /></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project3/"<h3>Project Data Analysis for B2B Retail: Customer Analytics Report</h3></a>
 								<p>Provide data and analysis regarding the condition of the company in the last month, including sales growth, customer growth,transaction growth, actual active customer, etc. To be presented at the townhall.</p>
 								</br>
 								<p><b>Tool Used :</b>&nbsp;&nbsp;<img src="images/gblogo.png" width="60" height="30">&nbsp;&nbsp;<img src="images/mslogo.png" width="40" height="30">&nbsp;&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/adytia.putra.pradana/" class="image fit thumb"><img src="images/pae.jpg" alt="" /></a>
-								<a href="https://public.tableau.com/app/profile/adytia.putra.pradana/"<h3>Data Analysis for E-Commerce </h3></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project2/" class="image fit thumb"><img src="images/pae.jpg" alt="" /></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project2/"<h3>Data Analysis for E-Commerce </h3></a>
 								<p>This project purpose is to Analyze the performance of the E-Commerce using MySQL</p>
 								</br>
 								<p><b>Tool Used :</b>&nbsp;&nbsp;<img src="images/gblogo.png" width="60" height="30">&nbsp;&nbsp;<img src="images/mslogo.png" width="40" height="30">&nbsp;&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://adytiapp.github.io/revou_dataviz_assignment/" class="image fit thumb"><img src="images/desql.png" alt="" /></a>
-								<a href="https://adytiapp.github.io/revou_dataviz_assignment/"<h3>Data Engineer Challenge with SQL</h3></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project1/" class="image fit thumb"><img src="images/desql.png" alt="" /></a>
+								<a href="https://pgandika.github.io/dqlab_sql_project1/"<h3>Data Engineer Challenge with SQL</h3></a>
 								<p>This project purpose is to test our capability in data engineering using mySQL</p>
 								</br>
 								<p><b>Tool Used :</b>&nbsp;&nbsp;<img src="images/gblogo.png" width="60" height="30">&nbsp;&nbsp;<img src="images/mslogo.png" width="40" height="30">&nbsp;&nbsp;</p>
